--- a/style.css
+++ b/style.css
@@ -1,14 +1,22 @@
+html{
+    width: 100%;
+    height: 100%;
+}
+
 .forme  a {
     color: white;
     
 }
+
 .forme  a:hover  {
     background-color: #3FBCFA;
-    color: white;
+    color: aliceblue;
+   
 }
 .forme button:hover{
-    color: white;
+    
     background-color: #3FBCFA ;
+    color: aliceblue;
 }
 .forme .question a{
     color: black;
@@ -17,3 +25,33 @@
     color: white;
     
 }
+header .logo{
+   
+    display: flex;
+    align-items: center;
+    justify-content: center;
+   
+    
+}
+.don{
+    background-color: #E70739;
+    color: white;
+    
+}
+.adhérer{
+    background-color: goldenrod;
+    color: white;
+    
+}
+.don:hover{
+    background-color: lightcoral;
+}
+.adhérer:hover{
+    background-color: #F6E497;
+}
+
+img{
+    color: aliceblue;
+}
+
+
