--- a/style.css
+++ b/style.css
@@ -31,6 +31,7 @@ header .logo{
     align-items: center;
     justify-content: center;
    
+   
     
 }
 .don{
@@ -53,5 +54,13 @@ header .logo{
 img{
     color: aliceblue;
 }
+header .titre{
+    
+    display: flex;
+    align-items: start;
+    color: #78A419;
+}
+
+
 
 
