Modification des boutons (faire un don) et (adhérer) ajout de deux logos pour chacun des boutons, modification du padding de chaque boutons, pour le bouton (adhérer) changement de couleur de base et au survole de la sourie, puis pour finir ajout d'un gap entre les deux boutons et le texte ajouté dans une balise span que j'ai mis en gras.

--- a/style.css
+++ b/style.css
@@ -3,6 +3,7 @@ html{
     height: 100%;
 }
 
+
 .forme  a {
     color: white;
     
@@ -40,25 +41,33 @@ header .logo{
     
 }
 .adhérer{
-    background-color: goldenrod;
+    background-color: #5EB6DD;
     color: white;
     
 }
 .don:hover{
     background-color: lightcoral;
 }
+.don span{
+    font-weight: bold;
+}
 .adhérer:hover{
-    background-color: #F6E497;
+    background-color: #C4D7ED;
+}
+.adhérer span{
+    font-weight: bold;
 }
 
 
+img{
+    color: aliceblue;
+}
 header .titre{
     
     display: flex;
     align-items: start;
     color: #78A419;
 }
-
 
 
 
