--- a/style.css
+++ b/style.css
@@ -66,7 +66,9 @@ header .titre{
     
     display: flex;
     align-items: start;
-    color: #78A419;
+    justify-content: center;
+    color: #375D81;
+    
 }
 
 
