Ajout d'un dossier  qui contient le style css pour mobile, j'ai ajouté dans le css des média queris pour gérer le responsive design des boutons (faire un don) et (adhérer)puis j'ai justifié le texte du titre de la page.J'ai aussi gérer le positionnement de mon entête et ses éléments pour qu'ils soient placé correctement.

--- a/style.css
+++ b/style.css
@@ -26,18 +26,24 @@ html{
     color: white;
     
 }
-header .logo{
+header div .logo{
    
     display: flex;
-    align-items: center;
-    justify-content: center;
+    align-items: start;
+    justify-content: start;
    
    
     
 }
+header .entête{
+    display: flex;
+    justify-content: end;
+}
 .don{
     background-color: #E70739;
     color: white;
+    display: flex;
+    justify-content: center;
     
 }
 .adhérer{
@@ -70,6 +76,7 @@ header .titre{
     color: #375D81;
     
 }
+
 
 
 
