J'ai ajouté dans mon (main) une section qui comporte un titre h3 et un titre h4, puis j'ai ajouté 4 paragraphes pour présenter l'association.J'ai ajouté du css sur le main pour mettre une couleur pour les textes et les titres,et je me suis servis de la grille bootstrap pour les positionner.

--- a/style.css
+++ b/style.css
@@ -4,6 +4,7 @@ html{
 }
 
 
+
 .forme  a {
     color: white;
     
@@ -76,6 +77,15 @@ header .titre{
     color: #375D81;
     
 }
+main .autisme28{
+    text-align: center;
+    background-color: whitesmoke;
+    color: #375D81;
+    font-family: Arial, Helvetica, sans-serif;
+    
+    
+}
+
 
 
 
