--- a/style.css
+++ b/style.css
@@ -88,7 +88,15 @@ main .autisme28{
 footer{
     background-color: #375D81;
     display: flex;
-    justify-content: center;
+    justify-content: space-evenly;
+}
+
+footer div ul li{
+    color: antiquewhite;
+    font-weight: bolder;
+    padding: 3px;
+    
+}
 
 
 
