J'ai ajouté 4 média queris pour différentes tailles d'écrans,puis j'ai mis une marge de 20 px a mon entête et une marge de 10 px dans la média queris 576px.Puis j'ai ajouté plusieurs breakpoint pour les divs (logo,titre,bouton) pour gérer le nombres de colonnes prise par chaques divs en fonction de la taille de l'écran.Puis j'ai changé le gap-3 des boutons en gap-1.

--- a/style.css
+++ b/style.css
@@ -3,12 +3,16 @@ html{
     height: 100%;
 }
 
+body header .entête{
+    margin: 20px;
+}
 
 
 .forme  a {
     color: white;
     
 }
+
 
 .forme  a:hover  {
     background-color: #3FBCFA;
@@ -39,6 +43,8 @@ header div .logo{
 header .entête{
     display: flex;
     justify-content: end;
+    
+    
 }
 .don{
     background-color: #E70739;
