--- a/média/mobil.css
+++ b/média/mobil.css
@@ -1,10 +1,28 @@
-@media screen and (max-width: 530px){
+@media screen and (max-width: 576px){
     header .icons .bouton{
         display: flex;
-        justify-content: end;
-        width: auto;
+        justify-content: space-evenly;
+        margin: 0%;
     }
-    header .titre{
-        text-align: justify;
+    .body header .entête{
+        margin: 10px;
     }
+  
+}
+
+@media screen and (max-width: 768px){
+ 
+
+}
+
+@media screen and (max-width: 992px){
+    
+}
+
+@media screen and (max-width: 1200px){
+    
+}
+
+@media screen and (max-width: 1400px){
+    
 }
